hphp/test/zend/good/bug41633_1.php
<?php
class Foo {
	const A = self::B;
	const B = "ok";
}
echo Foo::A."\n";
?>