hphp/test/zend/bad/Zend/tests/bug41633_3.php
<?php
class Foo {
	const A = Foo::B;
	const B = Foo::A;
}
echo Foo::A;
?>